name:                showdoom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chfi/showdoom#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2017 Christian Fischer
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable showdoom
  other-modules:       Doom.WAD
                     , Doom.WAD.Types
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , GeneralizedNewtypeDeriving

  build-depends:       base >= 4.7 && < 5
                     , brick
                     , bytestring
                     , attoparsec
                     , text
                     , classy-prelude
                     , optparse-applicative
                     , binary
