name:                showdoom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chfi/showdoom#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Fischer
maintainer:          christian@chfi.se
copyright:           2017 Christian Fischer
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Doom.WAD
                     , Doom.WAD.Types
                     , Doom.UI.Directory
                     , Doom.UI.Lump
  ghc-options:         -Wall
                       -threaded
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , DeriveFunctor
  hs-source-dirs:      src
  build-depends:       base                 >= 4.7     && < 5
                     , classy-prelude       >= 1.2.0.1 && < 1.3
                     , brick                >= 0.17    && < 0.18
                     , vty                  >= 5.15    && < 5.16
                     , bytestring           >= 0.10.8  && < 0.11
                     , attoparsec           >= 0.13.1  && < 0.14
                     , text                 >= 1.2.2   && < 1.3
                     , binary               >= 0.8.3   && < 0.9
                     , lens                 >= 4.15.1  && < 4.16
                     , linear               >= 1.20.6  && < 1.21

executable showdoom
  other-modules:       Graphics.Doom
                     , Graphics.Shader
                     , Graphics.Buffer
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , DeriveFunctor
  ghc-options:         -Wall
                       -threaded
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       showdoom
                     , base                 >= 4.7     && < 5
                     , classy-prelude       >= 1.2.0.1 && < 1.3
                     , brick                >= 0.17    && < 0.18
                     , vty                  >= 5.15    && < 5.16
                     , optparse-applicative >= 0.13.2  && < 0.14
                     , attoparsec           >= 0.13.1  && < 0.14
                     , gl                   >= 0.8.0   && < 0.9
                     , GLFW-b               >= 1.4.8.1 && < 1.5
                     , JuicyPixels          >= 3.2.8.2 && < 3.3
                     -- , vector
                     , lens                 >= 4.15.1  && < 4.16
                     -- , random
                     , bytestring           >= 0.10.8  && < 0.11
                     , linear               >= 1.20.6  && < 1.21